<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/loveButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:onClick="loveButton"
        android:text="@string/love"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/promote_top" />

    <Button
        android:id="@+id/joyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:onClick="joyButton"
        android:text="@string/joy"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loveButton" />

    <Button
        android:id="@+id/surpriseButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:onClick="surpriseButton"
        android:text="@string/surprise"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/joyButton" />

    <Button
        android:id="@+id/angerButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:onClick="angerButton"
        android:text="@string/anger"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surpriseButton" />

    <Button
        android:id="@+id/sadnessButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:onClick="sadnessButton"
        android:text="@string/sadness"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/angerButton" />

    <Button
        android:id="@+id/fearButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:onClick="fearButton"
        android:text="@string/fear"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sadnessButton" />

    <EditText
        android:id="@+id/inputComment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/hint_comment"
        android:inputType="textPersonName"
        android:maxLength="100"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/promote_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="16dp"
        android:text="@string/promote_bottom"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/inputComment"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/promote_top"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="24dp"
        android:text="@string/promote_top"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/countButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:onClick="showCount"
        android:text="@string/count"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/promote_bottom"
        app:layout_constraintEnd_toStartOf="@+id/historyButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fearButton" />

    <Button
        android:id="@+id/historyButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="16dp"
        android:onClick="showHistory"
        android:text="@string/history"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/promote_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/countButton"
        app:layout_constraintTop_toBottomOf="@+id/fearButton" />
</android.support.constraint.ConstraintLayout>